@@ -1,11 +1,11 @@
 package pro.karagodin.commands;
 
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import pro.karagodin.Runner;
 
 import java.io.BufferedReader;
 import java.io.Reader;
+import java.nio.file.FileSystems;
 import java.util.Arrays;
 import java.util.List;
 
@@ -13,12 +13,13 @@ import static org.junit.jupiter.api.Assertions.*;
 
 class ExecuteCommandTest {
 
+    private static final String SEP = FileSystems.getDefault().getSeparator();
+
     @Test
     public void test() throws Exception {
-        Runner runner = new Runner();
         Command command = new ExecuteCommand("java");
-        command.setArguments(Arrays.asList("-version"));
-        Reader reader = runner.run(List.of(command));
+        command.setArguments(Arrays.asList("-cp","."+ SEP +"target"+ SEP +"test-classes"+ SEP, "pro.karagodin.commands.MainTest"));
+        Reader reader = Runner.run(List.of(command));
 
         BufferedReader br = new BufferedReader(reader);
         StringBuilder actualBuffer = new StringBuilder();
@@ -28,7 +29,6 @@ class ExecuteCommandTest {
             actualBuffer.append(System.lineSeparator());
         }
 
-        String version = System.getProperty("java.version");
-        assertTrue(actualBuffer.toString().contains(version));
+        assertTrue(actualBuffer.toString().contains("Hello java!"));
     }
 }
